--- a/vite-project-dynamic/src/components/style.css
+++ b/vite-project-dynamic/src/components/style.css
@@ -46,7 +46,7 @@ body, html {
     font-size: 14px;
     display: flex;
     justify-content: center;
-    position: relative;
+    /* position: relative; */
     color: #374151;
     margin-bottom: 10px;
 }
@@ -71,6 +71,7 @@ body, html {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 .form--btn--submit {
@@ -90,4 +91,37 @@ body, html {
 .meme {
     max-width: 500px;
     height: auto;
+}
+
+.meme--text {
+    position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
+}
+
+.bottom {
+    bottom: 0;
+}
+
+.top {
+    top: 10%;
 }
